[package]
name = "pvsss"
version = "0.1.0"
edition = "2024"

[dependencies]
ve = { path = "../ve" }
nalgebra = "0.25.3"
merkle_light = {version = "0.4"}
hrcrypto = { package = "crypto", git = "https://github.com/linghe-yang/hashrand-rs.git" }
hrtypes = { package = "types", git = "https://github.com/linghe-yang/hashrand-rs.git" }
rand_chacha = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
